# branchless

./: .gitignore  CMakeLists.txt  README.md  build_run.sh  capitalise.asm  naieve_capitalise.c  naive_capitalise.c  run_capitalise.c  simd_capitalise.asm  simd_capitalise.c
include/: capitalise.h
src/: .branchless_capitalise.asm.swp  .capitalise.asm.swp  branchless_capitalise.asm  capitalise.asm  simd_capitalise.asm
test/: perf_test.c  unit_test.c
